--- a/index.html
+++ b/index.html
@@ -1,27 +1,59 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/index_style.css">
-    <title>Inicio</title>
-</head>
-<body>
-    <header class="card__header">
-        <section class="header__video">
-            <video autoplay muted loop class="video-fondo">
-                <source src="./video/172655-847860558_medium.mp4" type="video/mp4">
-            </video>
-            <div class="video-content">
-                <section class="header__content">
-                    <h1 class="content__title">Code Solutions</h1>
-                </section>
-                
-                <section class="card__button">
-                    <button class="enter-button"><a href="./html/sobre_mi.html">Saber mas</a></button>
-                </section>
-            </div>
-        </section>
-    </header>
-</body>
-</html>
+document.addEventListener('DOMContentLoaded', () => {
+  // === REGISTRO ===
+  const registerForm = document.getElementById('registerForm');
+  if (registerForm) {
+    registerForm.addEventListener('submit', async (e) => {
+      e.preventDefault();
+
+      const name = document.getElementById('name').value.trim();
+      const email = document.getElementById('email').value.trim();
+      const password = document.getElementById('password').value.trim();
+      const role = document.getElementById('role').value;
+
+      // Validar si el correo ya está registrado
+      const res = await fetch(`http://localhost:3000/users?email=${email}`);
+      const existingUsers = await res.json();
+
+      if (existingUsers.length > 0) {
+        alert("Este correo ya está registrado.");
+        return;
+      }
+
+      // Registrar usuario
+      const user = { name, email, password, role };
+      await fetch("http://localhost:3000/users", {
+        method: "POST",
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(user)
+      });
+
+      alert("Registro exitoso. Ahora puedes iniciar sesión.");
+      window.location.href = "login.html";
+    });
+  }
+
+  // === LOGIN ===
+  const loginForm = document.getElementById('loginForm');
+  if (loginForm) {
+    loginForm.addEventListener('submit', async (e) => {
+      e.preventDefault();
+
+      const email = document.getElementById('email').value.trim();
+      const password = document.getElementById('password').value.trim();
+
+      const res = await fetch(`http://localhost:3000/users?email=${email}&password=${password}`);
+      const data = await res.json();
+
+      if (data.length === 0) {
+        alert("Correo o contraseña incorrectos.");
+        return;
+      }
+
+      const user = data[0];
+      localStorage.setItem('user', JSON.stringify(user));
+
+      alert(`Bienvenido, ${user.name}`);
+      window.location.href = "dashboard.html"; // Redirige al dashboard
+    });
+  }
+});
