--- a/contacto.html
+++ b/contacto.html
@@ -1,26 +1,114 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>Iniciar Sesión</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="bg-light d-flex justify-content-center align-items-center vh-100">
-  <div class="card shadow p-4" style="width: 22rem;">
-    <h3 class="text-center mb-4">Iniciar Sesión</h3>
-    <form id="loginForm">
-      <div class="mb-3">
-        <label for="email" class="form-label">Correo electrónico</label>
-        <input type="email" class="form-control" id="email" required>
-      </div>
-      <div class="mb-3">
-        <label for="password" class="form-label">Contraseña</label>
-        <input type="password" class="form-control" id="password" required>
-      </div>
-      <button type="submit" class="btn btn-primary w-100">Entrar</button>
-      <p class="mt-3 text-center">¿No tienes cuenta? <a href="register.html">Regístrate</a></p>
-    </form>
-  </div>
-  <script src="/js/auth.js"></script>
-</body>
-</html>
+document.addEventListener('DOMContentLoaded', () => {
+  const user = JSON.parse(localStorage.getItem('user'));
+  if (!user || user.role !== 'admin') {
+    alert("Acceso denegado");
+    window.location.href = 'login.html';
+    return;
+  }
+
+  const eventTableBody = document.getElementById('eventTableBody');
+
+  // Función para mostrar los eventos
+  const loadEvents = async () => {
+    const res = await fetch('http://localhost:3000/events');
+    const events = await res.json();
+    eventTableBody.innerHTML = '';
+
+    events.forEach((event, index) => {
+      eventTableBody.innerHTML += `
+        <tr>
+          <td>${index + 1}</td>
+          <td><img src="${event.imageUrl || 'https://via.placeholder.com/80'}" class="thumbnail" style="width:80px;height:auto;" alt="Imagen"></td>
+          <td>${event.title}</td>
+          <td>${event.date}</td>
+          <td>${event.capacity}</td>
+          <td>
+            <button class="btn btn-sm btn-primary" onclick="editEvent(${event.id})">Editar</button>
+            <button class="btn btn-sm btn-danger ms-2" onclick="deleteEvent(${event.id})">Eliminar</button>
+          </td>
+        </tr>
+      `;
+    });
+  };
+
+  // Eliminar evento
+  window.deleteEvent = async (id) => {
+    if (confirm("¿Seguro que deseas eliminar este evento?")) {
+      await fetch(`http://localhost:3000/events/${id}`, { method: 'DELETE' });
+      loadEvents();
+    }
+  };
+
+  // Editar evento con prompt (incluye imagen URL)
+  window.editEvent = async (id) => {
+    const res = await fetch(`http://localhost:3000/events/${id}`);
+    const event = await res.json();
+
+    const title = prompt("Editar título:", event.title);
+    const date = prompt("Editar fecha:", event.date);
+    const capacity = prompt("Editar capacidad:", event.capacity);
+    const imageUrl = prompt("Editar imagen URL:", event.imageUrl || "");
+
+    if (!title || !date || !capacity) {
+      alert("Todos los campos son requeridos.");
+      return;
+    }
+
+    const updatedEvent = {
+      title,
+      date,
+      capacity: parseInt(capacity),
+      imageUrl
+    };
+
+    await fetch(`http://localhost:3000/events/${id}`, {
+      method: 'PUT',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify(updatedEvent)
+    });
+
+    alert("Evento actualizado con éxito.");
+    loadEvents();
+  };
+
+  // Crear evento con prompt (incluye imagen URL)
+  const createBtn = document.querySelector('.btn-success');
+  createBtn.addEventListener('click', async (e) => {
+    e.preventDefault();
+
+    const title = prompt("Título del evento:");
+    const date = prompt("Fecha del evento (YYYY-MM-DD):");
+    const capacity = prompt("Capacidad:");
+    const imageUrl = prompt("URL de imagen del evento (opcional):");
+
+    if (!title || !date || !capacity) {
+      alert("Todos los campos menos imagen son requeridos.");
+      return;
+    }
+
+    const newEvent = {
+      title,
+      date,
+      capacity: parseInt(capacity),
+      imageUrl
+    };
+
+    await fetch('http://localhost:3000/events', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify(newEvent)
+    });
+
+    alert("Evento creado con éxito.");
+    loadEvents();
+  });
+
+  // Cerrar sesión
+  document.getElementById("logoutBtn").addEventListener("click", () => {
+    localStorage.removeItem("user");
+    window.location.href = "login.html";
+  });
+
+  // Inicializar carga
+  loadEvents();
+});
