--- a/contacto.html
+++ b/contacto.html
@@ -1,114 +1,89 @@
-document.addEventListener('DOMContentLoaded', () => {
-  const user = JSON.parse(localStorage.getItem('user'));
-  if (!user || user.role !== 'admin') {
-    alert("Acceso denegado");
-    window.location.href = 'login.html';
-    return;
-  }
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Panel de Administrador</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    img.thumbnail {
+      width: 80px;
+      height: auto;
+      object-fit: cover;
+    }
+  </style>
+</head>
+<body>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Admin Eventos</a>
+      <div class="d-flex">
+        <button id="logoutBtn" class="btn btn-outline-light">Cerrar sesión</button>
+      </div>
+    </div>
+  </nav>
 
-  const eventTableBody = document.getElementById('eventTableBody');
+  <!-- Contenido -->
+  <div class="container mt-5">
+    <div class="d-flex justify-content-between align-items-center mb-3">
+      <h2>Gestión de Eventos</h2>
+      <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#createEventModal">Crear Evento</button>
+    </div>
 
-  // Función para mostrar los eventos
-  const loadEvents = async () => {
-    const res = await fetch('http://localhost:3000/events');
-    const events = await res.json();
-    eventTableBody.innerHTML = '';
-
-    events.forEach((event, index) => {
-      eventTableBody.innerHTML += `
+    <!-- Tabla -->
+    <table class="table table-bordered table-hover">
+      <thead class="table-dark">
         <tr>
-          <td>${index + 1}</td>
-          <td><img src="${event.imageUrl || 'https://via.placeholder.com/80'}" class="thumbnail" style="width:80px;height:auto;" alt="Imagen"></td>
-          <td>${event.title}</td>
-          <td>${event.date}</td>
-          <td>${event.capacity}</td>
-          <td>
-            <button class="btn btn-sm btn-primary" onclick="editEvent(${event.id})">Editar</button>
-            <button class="btn btn-sm btn-danger ms-2" onclick="deleteEvent(${event.id})">Eliminar</button>
-          </td>
+          <th>#</th>
+          <th>Imagen</th>
+          <th>Título</th>
+          <th>Fecha</th>
+          <th>Cupo</th>
+          <th>Acciones</th>
         </tr>
-      `;
-    });
-  };
+      </thead>
+      <tbody id="eventTableBody"></tbody>
+    </table>
+  </div>
 
-  // Eliminar evento
-  window.deleteEvent = async (id) => {
-    if (confirm("¿Seguro que deseas eliminar este evento?")) {
-      await fetch(`http://localhost:3000/events/${id}`, { method: 'DELETE' });
-      loadEvents();
-    }
-  };
+  <!-- Modal Crear Evento -->
+  <div class="modal fade" id="createEventModal" tabindex="-1" aria-labelledby="createEventLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <form id="createEventForm">
+          <div class="modal-header">
+            <h5 class="modal-title" id="createEventLabel">Crear Evento</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+          </div>
+          <div class="modal-body">
+            <div class="mb-3">
+              <label for="title" class="form-label">Título</label>
+              <input type="text" id="title" class="form-control" required>
+            </div>
+            <div class="mb-3">
+              <label for="date" class="form-label">Fecha</label>
+              <input type="date" id="date" class="form-control" required>
+            </div>
+            <div class="mb-3">
+              <label for="capacity" class="form-label">Capacidad</label>
+              <input type="number" id="capacity" class="form-control" required>
+            </div>
+            <div class="mb-3">
+              <label for="imageUrl" class="form-label">URL de Imagen</label>
+              <input type="url" id="imageUrl" class="form-control">
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="submit" class="btn btn-success">Guardar</button>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
 
-  // Editar evento con prompt (incluye imagen URL)
-  window.editEvent = async (id) => {
-    const res = await fetch(`http://localhost:3000/events/${id}`);
-    const event = await res.json();
-
-    const title = prompt("Editar título:", event.title);
-    const date = prompt("Editar fecha:", event.date);
-    const capacity = prompt("Editar capacidad:", event.capacity);
-    const imageUrl = prompt("Editar imagen URL:", event.imageUrl || "");
-
-    if (!title || !date || !capacity) {
-      alert("Todos los campos son requeridos.");
-      return;
-    }
-
-    const updatedEvent = {
-      title,
-      date,
-      capacity: parseInt(capacity),
-      imageUrl
-    };
-
-    await fetch(`http://localhost:3000/events/${id}`, {
-      method: 'PUT',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify(updatedEvent)
-    });
-
-    alert("Evento actualizado con éxito.");
-    loadEvents();
-  };
-
-  // Crear evento con prompt (incluye imagen URL)
-  const createBtn = document.querySelector('.btn-success');
-  createBtn.addEventListener('click', async (e) => {
-    e.preventDefault();
-
-    const title = prompt("Título del evento:");
-    const date = prompt("Fecha del evento (YYYY-MM-DD):");
-    const capacity = prompt("Capacidad:");
-    const imageUrl = prompt("URL de imagen del evento (opcional):");
-
-    if (!title || !date || !capacity) {
-      alert("Todos los campos menos imagen son requeridos.");
-      return;
-    }
-
-    const newEvent = {
-      title,
-      date,
-      capacity: parseInt(capacity),
-      imageUrl
-    };
-
-    await fetch('http://localhost:3000/events', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify(newEvent)
-    });
-
-    alert("Evento creado con éxito.");
-    loadEvents();
-  });
-
-  // Cerrar sesión
-  document.getElementById("logoutBtn").addEventListener("click", () => {
-    localStorage.removeItem("user");
-    window.location.href = "login.html";
-  });
-
-  // Inicializar carga
-  loadEvents();
-});
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="/js/admin_dashboard.js"></script>
+</body>
+</html>
