--- a/contacto.html
+++ b/contacto.html
@@ -30,7 +30,6 @@
       <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#createEventModal">Crear Evento</button>
     </div>
 
-    <!-- Tabla -->
     <table class="table table-bordered table-hover">
       <thead class="table-dark">
         <tr>
@@ -52,30 +51,41 @@
       <div class="modal-content">
         <form id="createEventForm">
           <div class="modal-header">
-            <h5 class="modal-title" id="createEventLabel">Crear Evento</h5>
+            <h5 class="modal-title">Crear Evento</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
           </div>
           <div class="modal-body">
-            <div class="mb-3">
-              <label for="title" class="form-label">Título</label>
-              <input type="text" id="title" class="form-control" required>
-            </div>
-            <div class="mb-3">
-              <label for="date" class="form-label">Fecha</label>
-              <input type="date" id="date" class="form-control" required>
-            </div>
-            <div class="mb-3">
-              <label for="capacity" class="form-label">Capacidad</label>
-              <input type="number" id="capacity" class="form-control" required>
-            </div>
-            <div class="mb-3">
-              <label for="imageUrl" class="form-label">URL de Imagen</label>
-              <input type="url" id="imageUrl" class="form-control">
-            </div>
+            <input type="text" id="title" class="form-control mb-2" placeholder="Título" required>
+            <input type="date" id="date" class="form-control mb-2" required>
+            <input type="number" id="capacity" class="form-control mb-2" placeholder="Capacidad" required>
+            <input type="url" id="imageUrl" class="form-control mb-2" placeholder="URL de imagen (opcional)">
           </div>
           <div class="modal-footer">
             <button type="submit" class="btn btn-success">Guardar</button>
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal Editar Evento -->
+  <div class="modal fade" id="editEventModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <form id="editEventForm">
+          <div class="modal-header">
+            <h5 class="modal-title">Editar Evento</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+          </div>
+          <div class="modal-body">
+            <input type="hidden" id="editId">
+            <input type="text" id="editTitle" class="form-control mb-2" placeholder="Título" required>
+            <input type="date" id="editDate" class="form-control mb-2" required>
+            <input type="number" id="editCapacity" class="form-control mb-2" placeholder="Capacidad" required>
+            <input type="url" id="editImageUrl" class="form-control mb-2" placeholder="URL de imagen">
+          </div>
+          <div class="modal-footer">
+            <button type="submit" class="btn btn-primary">Actualizar</button>
           </div>
         </form>
       </div>
