--- a/contacto.html
+++ b/contacto.html
@@ -1,99 +1,75 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>Panel de Administrador</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    img.thumbnail {
-      width: 80px;
-      height: auto;
-      object-fit: cover;
-    }
-  </style>
-</head>
-<body>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Admin Eventos</a>
-      <div class="d-flex">
-        <button id="logoutBtn" class="btn btn-outline-light">Cerrar sesión</button>
-      </div>
-    </div>
-  </nav>
+document.addEventListener('DOMContentLoaded', () => {
+  const user = JSON.parse(localStorage.getItem('user'));
+  if (!user || user.role !== 'visitor') {
+    alert('Acceso no autorizado');
+    window.location.href = 'login.html';
+    return;
+  }
 
-  <!-- Contenido -->
-  <div class="container mt-5">
-    <div class="d-flex justify-content-between align-items-center mb-3">
-      <h2>Gestión de Eventos</h2>
-      <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#createEventModal">Crear Evento</button>
-    </div>
+  const eventList = document.getElementById('eventList');
 
-    <table class="table table-bordered table-hover">
-      <thead class="table-dark">
+  async function loadEvents() {
+    const res = await fetch('http://localhost:3000/events');
+    const events = await res.json();
+
+    const registrationsRes = await fetch('http://localhost:3000/registrations');
+    const registrations = await registrationsRes.json();
+
+    eventList.innerHTML = '';
+    events.forEach((event, index) => {
+      const registeredCount = registrations.filter(r => r.eventId === event.id).length;
+      const alreadyRegistered = registrations.some(r => r.eventId === event.id && r.userId === user.id);
+      const availableSpots = event.capacity - registeredCount;
+
+      eventList.innerHTML += `
         <tr>
-          <th>#</th>
-          <th>Imagen</th>
-          <th>Título</th>
-          <th>Fecha</th>
-          <th>Cupo</th>
-          <th>Acciones</th>
+          <td>${index + 1}</td>
+          <td>${event.title}</td>
+          <td>${event.date}</td>
+          <td>${event.capacity}</td>
+          <td>${registeredCount}</td>
+          <td>
+            ${alreadyRegistered
+              ? '<span class="text-success">Registrado</span>'
+              : availableSpots > 0
+                ? `<button class="btn btn-sm btn-primary" onclick="register(${event.id}, ${availableSpots})">Registrarse</button>`
+                : '<span class="text-danger fw-bold">Sold Out</span>'}
+          </td>
         </tr>
-      </thead>
-      <tbody id="eventTableBody"></tbody>
-    </table>
-  </div>
+      `;
+    });
+  }
 
-  <!-- Modal Crear Evento -->
-  <div class="modal fade" id="createEventModal" tabindex="-1" aria-labelledby="createEventLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <form id="createEventForm">
-          <div class="modal-header">
-            <h5 class="modal-title">Crear Evento</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-          </div>
-          <div class="modal-body">
-            <input type="text" id="title" class="form-control mb-2" placeholder="Título" required>
-            <input type="date" id="date" class="form-control mb-2" required>
-            <input type="number" id="capacity" class="form-control mb-2" placeholder="Capacidad" required>
-            <input type="url" id="imageUrl" class="form-control mb-2" placeholder="URL de imagen (opcional)">
-          </div>
-          <div class="modal-footer">
-            <button type="submit" class="btn btn-success">Guardar</button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
+  // Función de registro al evento
+  window.register = async (eventId, availableSpots) => {
+    if (availableSpots <= 0) {
+      alert("Este evento ya no tiene cupos disponibles.");
+      return;
+    }
 
-  <!-- Modal Editar Evento -->
-  <div class="modal fade" id="editEventModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <form id="editEventForm">
-          <div class="modal-header">
-            <h5 class="modal-title">Editar Evento</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-          </div>
-          <div class="modal-body">
-            <input type="hidden" id="editId">
-            <input type="text" id="editTitle" class="form-control mb-2" placeholder="Título" required>
-            <input type="date" id="editDate" class="form-control mb-2" required>
-            <input type="number" id="editCapacity" class="form-control mb-2" placeholder="Capacidad" required>
-            <input type="url" id="editImageUrl" class="form-control mb-2" placeholder="URL de imagen">
-          </div>
-          <div class="modal-footer">
-            <button type="submit" class="btn btn-primary">Actualizar</button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
+    const res = await fetch(`http://localhost:3000/registrations?eventId=${eventId}&userId=${user.id}`);
+    const alreadyRegistered = await res.json();
 
-  <!-- Scripts -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="/js/admin_dashboard.js"></script>
-</body>
-</html>
+    if (alreadyRegistered.length > 0) {
+      alert("Ya estás registrado en este evento.");
+      return;
+    }
+
+    await fetch('http://localhost:3000/registrations', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ userId: user.id, eventId })
+    });
+
+    alert("Te has registrado exitosamente.");
+    loadEvents();
+  };
+
+  // Cerrar sesión
+  document.getElementById('logoutBtn').addEventListener('click', () => {
+    localStorage.removeItem('user');
+    window.location.href = 'login.html';
+  });
+
+  loadEvents();
+});
