--- a/contacto.html
+++ b/contacto.html
@@ -1,75 +1,43 @@
-document.addEventListener('DOMContentLoaded', () => {
-  const user = JSON.parse(localStorage.getItem('user'));
-  if (!user || user.role !== 'visitor') {
-    alert('Acceso no autorizado');
-    window.location.href = 'login.html';
-    return;
-  }
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Panel del Visitante</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
 
-  const eventList = document.getElementById('eventList');
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Eventos</a>
+      <div class="d-flex">
+        <button id="logoutBtn" class="btn btn-outline-light">Cerrar sesión</button>
+      </div>
+    </div>
+  </nav>
 
-  async function loadEvents() {
-    const res = await fetch('http://localhost:3000/events');
-    const events = await res.json();
-
-    const registrationsRes = await fetch('http://localhost:3000/registrations');
-    const registrations = await registrationsRes.json();
-
-    eventList.innerHTML = '';
-    events.forEach((event, index) => {
-      const registeredCount = registrations.filter(r => r.eventId === event.id).length;
-      const alreadyRegistered = registrations.some(r => r.eventId === event.id && r.userId === user.id);
-      const availableSpots = event.capacity - registeredCount;
-
-      eventList.innerHTML += `
+  <!-- Contenido principal -->
+  <div class="container mt-5">
+    <h2>Eventos Disponibles</h2>
+    <table class="table table-bordered table-hover">
+      <thead class="table-dark">
         <tr>
-          <td>${index + 1}</td>
-          <td>${event.title}</td>
-          <td>${event.date}</td>
-          <td>${event.capacity}</td>
-          <td>${registeredCount}</td>
-          <td>
-            ${alreadyRegistered
-              ? '<span class="text-success">Registrado</span>'
-              : availableSpots > 0
-                ? `<button class="btn btn-sm btn-primary" onclick="register(${event.id}, ${availableSpots})">Registrarse</button>`
-                : '<span class="text-danger fw-bold">Sold Out</span>'}
-          </td>
+          <th>#</th>
+          <th>Título</th>
+          <th>Fecha</th>
+          <th>Cupo</th>
+          <th>Registrados</th>
+          <th>Acción</th>
         </tr>
-      `;
-    });
-  }
+      </thead>
+      <tbody id="eventList">
+        <!-- Eventos cargados dinámicamente -->
+      </tbody>
+    </table>
+  </div>
 
-  // Función de registro al evento
-  window.register = async (eventId, availableSpots) => {
-    if (availableSpots <= 0) {
-      alert("Este evento ya no tiene cupos disponibles.");
-      return;
-    }
-
-    const res = await fetch(`http://localhost:3000/registrations?eventId=${eventId}&userId=${user.id}`);
-    const alreadyRegistered = await res.json();
-
-    if (alreadyRegistered.length > 0) {
-      alert("Ya estás registrado en este evento.");
-      return;
-    }
-
-    await fetch('http://localhost:3000/registrations', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ userId: user.id, eventId })
-    });
-
-    alert("Te has registrado exitosamente.");
-    loadEvents();
-  };
-
-  // Cerrar sesión
-  document.getElementById('logoutBtn').addEventListener('click', () => {
-    localStorage.removeItem('user');
-    window.location.href = 'login.html';
-  });
-
-  loadEvents();
-});
+  <!-- Script -->
+  <script src="/js/visitor_dashboard.js"></script>
+</body>
+</html>
