--- a/sobre_mi.html
+++ b/sobre_mi.html
@@ -1,99 +1,114 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>Panel de Administrador</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    img.thumbnail {
-      width: 80px;
-      height: auto;
-      object-fit: cover;
-    }
-  </style>
-</head>
-<body>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Admin Eventos</a>
-      <div class="d-flex">
-        <button id="logoutBtn" class="btn btn-outline-light">Cerrar sesión</button>
-      </div>
-    </div>
-  </nav>
+document.addEventListener('DOMContentLoaded', () => {
+  const user = JSON.parse(localStorage.getItem('user'));
+  if (!user || user.role !== 'admin') {
+    alert("Acceso denegado");
+    window.location.href = 'login.html';
+    return;
+  }
 
-  <!-- Contenido -->
-  <div class="container mt-5">
-    <div class="d-flex justify-content-between align-items-center mb-3">
-      <h2>Gestión de Eventos</h2>
-      <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#createEventModal">Crear Evento</button>
-    </div>
+  const eventTableBody = document.getElementById('eventTableBody');
 
-    <table class="table table-bordered table-hover">
-      <thead class="table-dark">
+  // Función para mostrar los eventos
+  const loadEvents = async () => {
+    const res = await fetch('http://localhost:3000/events');
+    const events = await res.json();
+    eventTableBody.innerHTML = '';
+
+    events.forEach((event, index) => {
+      eventTableBody.innerHTML += `
         <tr>
-          <th>#</th>
-          <th>Imagen</th>
-          <th>Título</th>
-          <th>Fecha</th>
-          <th>Cupo</th>
-          <th>Acciones</th>
+          <td>${index + 1}</td>
+          <td><img src="${event.imageUrl || 'https://via.placeholder.com/80'}" class="thumbnail" style="width:80px;height:auto;" alt="Imagen"></td>
+          <td>${event.title}</td>
+          <td>${event.date}</td>
+          <td>${event.capacity}</td>
+          <td>
+            <button class="btn btn-sm btn-primary" onclick="editEvent(${event.id})">Editar</button>
+            <button class="btn btn-sm btn-danger ms-2" onclick="deleteEvent(${event.id})">Eliminar</button>
+          </td>
         </tr>
-      </thead>
-      <tbody id="eventTableBody"></tbody>
-    </table>
-  </div>
+      `;
+    });
+  };
 
-  <!-- Modal Crear Evento -->
-  <div class="modal fade" id="createEventModal" tabindex="-1" aria-labelledby="createEventLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <form id="createEventForm">
-          <div class="modal-header">
-            <h5 class="modal-title">Crear Evento</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-          </div>
-          <div class="modal-body">
-            <input type="text" id="title" class="form-control mb-2" placeholder="Título" required>
-            <input type="date" id="date" class="form-control mb-2" required>
-            <input type="number" id="capacity" class="form-control mb-2" placeholder="Capacidad" required>
-            <input type="url" id="imageUrl" class="form-control mb-2" placeholder="URL de imagen (opcional)">
-          </div>
-          <div class="modal-footer">
-            <button type="submit" class="btn btn-success">Guardar</button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
+  // Eliminar evento
+  window.deleteEvent = async (id) => {
+    if (confirm("¿Seguro que deseas eliminar este evento?")) {
+      await fetch(`http://localhost:3000/events/${id}`, { method: 'DELETE' });
+      loadEvents();
+    }
+  };
 
-  <!-- Modal Editar Evento -->
-  <div class="modal fade" id="editEventModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <form id="editEventForm">
-          <div class="modal-header">
-            <h5 class="modal-title">Editar Evento</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-          </div>
-          <div class="modal-body">
-            <input type="hidden" id="editId">
-            <input type="text" id="editTitle" class="form-control mb-2" placeholder="Título" required>
-            <input type="date" id="editDate" class="form-control mb-2" required>
-            <input type="number" id="editCapacity" class="form-control mb-2" placeholder="Capacidad" required>
-            <input type="url" id="editImageUrl" class="form-control mb-2" placeholder="URL de imagen">
-          </div>
-          <div class="modal-footer">
-            <button type="submit" class="btn btn-primary">Actualizar</button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
+  // Editar evento con prompt (incluye imagen URL)
+  window.editEvent = async (id) => {
+    const res = await fetch(`http://localhost:3000/events/${id}`);
+    const event = await res.json();
 
-  <!-- Scripts -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="/js/admin_dashboard.js"></script>
-</body>
-</html>
+    const title = prompt("Editar título:", event.title);
+    const date = prompt("Editar fecha:", event.date);
+    const capacity = prompt("Editar capacidad:", event.capacity);
+    const imageUrl = prompt("Editar imagen URL:", event.imageUrl || "");
+
+    if (!title || !date || !capacity) {
+      alert("Todos los campos son requeridos.");
+      return;
+    }
+
+    const updatedEvent = {
+      title,
+      date,
+      capacity: parseInt(capacity),
+      imageUrl
+    };
+
+    await fetch(`http://localhost:3000/events/${id}`, {
+      method: 'PUT',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify(updatedEvent)
+    });
+
+    alert("Evento actualizado con éxito.");
+    loadEvents();
+  };
+
+  // Crear evento con prompt (incluye imagen URL)
+  const createBtn = document.querySelector('.btn-success');
+  createBtn.addEventListener('click', async (e) => {
+    e.preventDefault();
+
+    const title = prompt("Título del evento:");
+    const date = prompt("Fecha del evento (YYYY-MM-DD):");
+    const capacity = prompt("Capacidad:");
+    const imageUrl = prompt("URL de imagen del evento (opcional):");
+
+    if (!title || !date || !capacity) {
+      alert("Todos los campos menos imagen son requeridos.");
+      return;
+    }
+
+    const newEvent = {
+      title,
+      date,
+      capacity: parseInt(capacity),
+      imageUrl
+    };
+
+    await fetch('http://localhost:3000/events', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify(newEvent)
+    });
+
+    alert("Evento creado con éxito.");
+    loadEvents();
+  });
+
+  // Cerrar sesión
+  document.getElementById("logoutBtn").addEventListener("click", () => {
+    localStorage.removeItem("user");
+    window.location.href = "login.html";
+  });
+
+  // Inicializar carga
+  loadEvents();
+});
