--- a/index.html
+++ b/index.html
@@ -1,30 +1,44 @@
-document.addEventListener('DOMContentLoaded', () => {
-  const user = JSON.parse(localStorage.getItem('user'));
-  const path = window.location.pathname;
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Panel del Visitante</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
 
-  // Rutas públicas permitidas sin login
-  const publicRoutes = ['/login.html', '/register.html', '/not_found.html', '/'];
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Eventos</a>
+      <div class="d-flex">
+        <button id="logoutBtn" class="btn btn-outline-light">Cerrar sesión</button>
+      </div>
+    </div>
+  </nav>
 
-  // Rutas protegidas solo para admin
-  const adminRoutes = ['/views/dashboard.html'];
+  <!-- Contenido principal -->
+  <div class="container mt-5">
+    <h2>Eventos Disponibles</h2>
+    <table class="table table-bordered table-hover">
+      <thead class="table-dark">
+        <tr>
+          <th>#</th>
+          <th>Imagen</th>
+          <th>Título</th>
+          <th>Fecha</th>
+          <th>Cupo</th>
+          <th>Registrados</th>
+          <th>Acción</th>
+        </tr>
+      </thead>
+      <tbody id="eventList">
+        <!-- Eventos generados dinámicamente -->
+      </tbody>
+    </table>
+  </div>
 
-  // Si NO hay usuario y quiere acceder a una ruta protegida
-  if (!user && !publicRoutes.includes(path)) {
-    window.location.href = '/views/not_found.html';
-    return;
-  }
-
-  // Si SÍ hay usuario logueado e intenta ir a login o register
-  if (user && (path.includes('/login.html') || path.includes('/register.html'))) {
-    window.location.href = '/views/dashboard.html';
-    return;
-  }
-
-  // Si el usuario NO es admin e intenta acceder al dashboard admin
-  if (user && user.role !== 'admin' && adminRoutes.includes(path)) {
-    window.location.href = '/views/not_found.html';
-    return;
-  }
-
-  // Si llega aquí, la ruta está permitida
-});
+  <!-- Script -->
+  <script src="js/visitor_dashboard.js"></script>
+</body>
+</html>
